# llm-provider-feature-catalog

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: lint.yml
data/: feature_matrix-old.csv  feature_matrix.csv  providers.json
docs/: api_scraper.py
docs/anthropic/: messages.md  sources.json
docs/baseten/: sources.json
docs/cerebras/: chat-completions.md  chat_completions.md  completions.md  sources.json
docs/fireworks/: sources.json
docs/groq/: sources.json
docs/openai/: chat-completions.md  sources.json
examples/python/: chat_completions.py  fireworks-vs-cerebras-api-tests.py  predicted_outputs.py  prompt_caching.py  streaming.py  structured_output.py  tool_calling.py
